# neopatch

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  justfile  neopatch.ini.example
.cargo/: config.toml
neopatch_core/: Cargo.toml
neopatch_core/src/: config.rs  crash.rs  d3d9.rs  d3dx9.rs  destructor_pump.rs  dinput8.rs  exit_hooks.rs  game_addr.rs  gdi_caps.rs  iat.rs  input.rs  lib.rs  loader_sync.rs  log.rs  log_cap.rs  modules.rs  pacer.rs  patches.rs  process.rs  replay.rs  screenshot.rs  thread.rs  timer_period.rs  untrusted.rs  vtable.rs  watchdog.rs  window.rs
neopatch_th10/: Cargo.toml  neopatch.ini.example
neopatch_th10/src/: config.rs  dialog_dismiss.rs  lib.rs  patches.rs  state.rs
neopatch_th11/: Cargo.toml  neopatch.ini.example
neopatch_th11/src/: config.rs  dialog_dismiss.rs  lib.rs  patches.rs  state.rs
neopatch_th12/: Cargo.toml  neopatch.ini.example
neopatch_th12/src/: config.rs  dialog_dismiss.rs  lib.rs  patches.rs  state.rs
neopatch_th13/: Cargo.toml  neopatch.ini.example
neopatch_th13/src/: dialog_dismiss.rs  lib.rs  patches.rs  state.rs
neopatch_th14/: Cargo.toml  neopatch.ini.example
neopatch_th14/src/: config.rs  dialog_dismiss.rs  lib.rs  patches.rs  state.rs
neopatch_th15/: Cargo.toml  build.rs  neopatch.ini.example
neopatch_th15/src/: config.rs  crash.rs  d3d9.rs  d3dx9.rs  dialog_dismiss.rs  exit_hooks.rs  game_addr.rs  gdi_caps.rs  iat.rs  lib.rs  log.rs  modules.rs  pacer.rs  patches.rs  process.rs  protect.rs  state.rs  th15_patches.rs  th15_state.rs  thread.rs  timer_period.rs  untrusted.rs  vtable.rs  watchdog.rs  window.rs
neopatch_th16/: Cargo.toml  neopatch.ini.example
neopatch_th16/src/: config.rs  dialog_dismiss.rs  lib.rs  patches.rs  state.rs
neopatch_th17/: Cargo.toml  neopatch.ini.example
neopatch_th17/src/: config.rs  dialog_dismiss.rs  lib.rs  patches.rs  state.rs
neopatch_th18/: Cargo.toml  neopatch.ini.example
neopatch_th18/src/: config.rs  dialog_dismiss.rs  lib.rs  patches.rs  state.rs
