[workspace]
resolver = "3"
members = ["neopatch_th15"]

[workspace.package]
version = "0.2.0"
authors = ["Kyle Chen"]
edition = "2024"
rust-version = "1.87"
readme = "README.md"
repository = "https://github.com/astral4/neopatch"
license = "MIT OR Apache-2.0"
publish = false

[workspace.lints.rust]
async_fn_in_trait = "allow"
ffi_unwind_calls = "deny"
improper_ctypes = "deny"
improper_ctypes_definitions = "deny"
let_underscore_drop = "deny"
macro_use_extern_crate = "deny"
meta_variable_misuse = "deny"
missing_abi = "deny"
missing_unsafe_on_extern = "deny"
non_ascii_idents = "forbid"
nonstandard_style = { level = "deny", priority = 1 }
redundant_lifetimes = "deny"
rust_2018_idioms = { level = "deny", priority = 1 }
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unit_bindings = "deny"
unreachable_pub = "deny"
unsafe_attr_outside_unsafe = "deny"
unsafe_op_in_unsafe_fn = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_macro_rules = "deny"
unused_qualifications = "deny"

[workspace.lints.clippy]
cargo = "warn"
dbg_macro = "warn"
doc_markdown = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
pedantic = "warn"
print_stderr = "warn"
print_stdout = "warn"
should_panic_without_expect = { level = "allow", priority = 1 }
todo = "warn"
unimplemented = "warn"
unreadable_literal = { level = "allow", priority = 1 }

[profile.release]
lto = "thin"
panic = "abort"
strip = true

[profile.dev]
panic = "abort"
