[workspace]
resolver = "3"
members = ["neopatch_core", "neopatch_th10", "neopatch_th11", "neopatch_th12", "neopatch_th15"]

[workspace.package]
version = "0.4.1"
authors = ["Kyle Chen"]
edition = "2024"
rust-version = "1.87"
readme = "README.md"
repository = "https://github.com/astral4/neopatch"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry"] }
windows = { version = "0.62", default-features = false, features = [
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_Foundation",
    "Win32_Graphics_Direct3D9",
    "Win32_Graphics_Gdi",
] }
windows-sys = { version = "0.61", features = [
    "Wdk_Foundation",
    "Wdk_System_Threading",
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Graphics_Gdi",
    "Win32_Media",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Kernel",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Performance",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_UI_Controls",
    "Win32_UI_WindowsAndMessaging",
] }

[workspace.lints.rust]
async_fn_in_trait = "allow"
ffi_unwind_calls = "deny"
improper_ctypes = "deny"
improper_ctypes_definitions = "deny"
let_underscore_drop = "deny"
macro_use_extern_crate = "deny"
meta_variable_misuse = "deny"
missing_abi = "deny"
missing_unsafe_on_extern = "deny"
non_ascii_idents = "forbid"
nonstandard_style = { level = "deny", priority = 1 }
redundant_lifetimes = "deny"
rust_2018_idioms = { level = "deny", priority = 1 }
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unit_bindings = "deny"
unreachable_pub = "deny"
unsafe_attr_outside_unsafe = "deny"
unsafe_op_in_unsafe_fn = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_macro_rules = "deny"
unused_qualifications = "deny"

[workspace.lints.clippy]
cargo = "warn"
dbg_macro = "warn"
doc_markdown = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
pedantic = "warn"
print_stderr = "warn"
print_stdout = "warn"
should_panic_without_expect = { level = "allow", priority = 1 }
todo = "warn"
unimplemented = "warn"
unreadable_literal = { level = "allow", priority = 1 }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
panic = "abort"
