[package]
name = "neopatch_core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Game-agnostic foundation for neopatch (hooks, pacer, diagnostics)"
readme.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "neopatch_core"

[lints]
workspace = true

[dependencies]
windows-sys = { workspace = true }
windows = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
