[package]
name = "neopatch_th10"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "neopatch for Touhou 10"
readme.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
neopatch_core = { path = "../neopatch_core" }
windows-sys = { workspace = true }
windows = { workspace = true }
tracing = { workspace = true }
